--- a/'Za Hunter/Base.lproj/Main.storyboard
+++ b/'Za Hunter/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RWP-uD-Pcb">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -18,22 +18,124 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="NsG-Io-6KV">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="375" id="aUW-3D-Adm"/>
-                                    <constraint firstAttribute="height" constant="667" id="shJ-VF-Aq6"/>
-                                </constraints>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="NsG-Io-6KV">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="NsG-Io-6KV" secondAttribute="trailing" id="2ue-SF-iI3"/>
+                            <constraint firstItem="NsG-Io-6KV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="JOz-TD-pJS"/>
+                            <constraint firstItem="NsG-Io-6KV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OY1-0N-Alz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="NsG-Io-6KV" secondAttribute="bottom" id="RUT-VL-RqV"/>
+                            <constraint firstItem="NsG-Io-6KV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="U0I-aH-ZvB"/>
+                            <constraint firstItem="NsG-Io-6KV" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="tFi-SA-YfK"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Nw6-KW-5aA"/>
                     <connections>
                         <outlet property="mapView" destination="NsG-Io-6KV" id="0WY-YW-sYg"/>
+                        <segue destination="wul-ZI-Ump" kind="show" identifier="ShowLocationDetailsSegue" id="bBG-w0-Fbx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1076" y="132.68365817091455"/>
+        </scene>
+        <!--Location Details View Controller-->
+        <scene sceneID="MhC-ZT-dUL">
+            <objects>
+                <viewController id="wul-ZI-Ump" customClass="LocationDetailsViewController" customModule="_Za_Hunter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="99f-xl-ZPi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nat-JO-wDF">
+                                <rect key="frame" x="87" y="355" width="200" height="150"/>
+                                <color key="backgroundColor" red="0.55634254220000001" green="0.97934550050000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cOe-ro-xWx">
+                                <rect key="frame" x="87" y="88" width="200" height="50"/>
+                                <color key="backgroundColor" red="0.55634254220000001" green="0.97934550050000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="JJL-kl-b1b"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TI0-XI-wRI">
+                                <rect key="frame" x="87" y="173" width="200" height="50"/>
+                                <color key="backgroundColor" red="0.55634254220000001" green="0.97934550050000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="tt3-K4-1UM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h2P-cc-ca4">
+                                <rect key="frame" x="87" y="258" width="200" height="50"/>
+                                <color key="backgroundColor" red="0.55634254220000001" green="0.97934550050000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="T09-4l-bLh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="nat-JO-wDF" firstAttribute="centerX" secondItem="99f-xl-ZPi" secondAttribute="centerX" id="05D-WM-34r"/>
+                            <constraint firstItem="h2P-cc-ca4" firstAttribute="centerX" secondItem="99f-xl-ZPi" secondAttribute="centerX" id="98x-JP-u8C"/>
+                            <constraint firstItem="nat-JO-wDF" firstAttribute="top" secondItem="h2P-cc-ca4" secondAttribute="bottom" constant="47" id="DYW-mq-nfj"/>
+                            <constraint firstItem="cOe-ro-xWx" firstAttribute="centerX" secondItem="99f-xl-ZPi" secondAttribute="centerX" id="Fe0-VE-j55"/>
+                            <constraint firstItem="TI0-XI-wRI" firstAttribute="centerX" secondItem="99f-xl-ZPi" secondAttribute="centerX" id="I0q-ZK-mSR"/>
+                            <constraint firstItem="TI0-XI-wRI" firstAttribute="leading" secondItem="h2P-cc-ca4" secondAttribute="leading" id="Kg9-0m-wQ6"/>
+                            <constraint firstItem="h2P-cc-ca4" firstAttribute="leading" secondItem="nat-JO-wDF" secondAttribute="leading" id="Ln6-W7-rSV"/>
+                            <constraint firstItem="nat-JO-wDF" firstAttribute="centerX" secondItem="99f-xl-ZPi" secondAttribute="centerX" id="LyN-V5-UuC"/>
+                            <constraint firstItem="h2P-cc-ca4" firstAttribute="centerX" secondItem="99f-xl-ZPi" secondAttribute="centerX" id="QIi-2f-Foo"/>
+                            <constraint firstItem="cOe-ro-xWx" firstAttribute="top" secondItem="5Kx-iz-YdB" secondAttribute="top" constant="24" id="arS-OP-niW"/>
+                            <constraint firstItem="cOe-ro-xWx" firstAttribute="leading" secondItem="TI0-XI-wRI" secondAttribute="leading" id="b69-tA-Psk"/>
+                            <constraint firstItem="h2P-cc-ca4" firstAttribute="top" secondItem="TI0-XI-wRI" secondAttribute="bottom" constant="35" id="ebp-XL-ptU"/>
+                            <constraint firstItem="TI0-XI-wRI" firstAttribute="centerX" secondItem="99f-xl-ZPi" secondAttribute="centerX" id="iHA-6C-T4M"/>
+                            <constraint firstItem="5Kx-iz-YdB" firstAttribute="bottom" secondItem="nat-JO-wDF" secondAttribute="bottom" constant="162" id="pks-pY-LuC"/>
+                            <constraint firstItem="cOe-ro-xWx" firstAttribute="centerX" secondItem="99f-xl-ZPi" secondAttribute="centerX" id="taf-Yj-8fe"/>
+                            <constraint firstItem="TI0-XI-wRI" firstAttribute="top" secondItem="cOe-ro-xWx" secondAttribute="bottom" constant="35" id="w5Q-jh-vr6"/>
+                            <constraint firstItem="cOe-ro-xWx" firstAttribute="leading" secondItem="5Kx-iz-YdB" secondAttribute="leading" constant="87" id="zxq-72-fMK"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="5Kx-iz-YdB"/>
+                    </view>
+                    <connections>
+                        <outlet property="addressLabel" destination="TI0-XI-wRI" id="bCk-8j-NHM"/>
+                        <outlet property="nameLabel" destination="cOe-ro-xWx" id="EtG-wZ-N8p"/>
+                        <outlet property="phoneLabel" destination="h2P-cc-ca4" id="DTW-6D-c8I"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Fc-A8-nJF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1854" y="133"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Oj3-E3-e5n">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RWP-uD-Pcb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="B1I-Gw-gGL">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="diy-qS-WHf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MAq-hh-cLw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="132.68365817091455"/>
         </scene>
